# ecg-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  start.sh
api/: README.md  application_factory.py  fake_data.json  main.py  pyproject.toml
api/core/: database.py  exceptions.py  utils.py
api/core/auth/: auth_bearer.py  auth_handler.py
api/core/schemas/: base.py  user.py
api/core/settings/: __init__.py  metadata.py
api/libs/: logger.py  utils.py
api/middlewares/: logger.py
api/services/ecg/: exceptions.py
api/services/ecg/data_sources/: default.py  ecg.py
api/services/ecg/logic/: default.py  ecg.py
api/services/ecg/routers/: default.py  ecg.py
api/services/ecg/schemas/: default.py  ecg.py
api/services/user/: exceptions.py
api/services/user/data_sources/: default.py  user.py
api/services/user/logic/: default.py  user.py
api/services/user/routers/: default.py  user.py
api/services/user/schemas/: user.py
api/test/unit/services/ecg/routers/: test_ecg.py
api/tests/: conftest.py
api/tests/fixtures/: authentication.py
api/tests/integration/services/ecg/routers/: test_ecg.py
api/tests/integration/services/user/routers/: test_user.py
api/tests/unit/services/ecg/logic/: test_ecg.py
api/tests/unit/services/ecg/routers/: test_ecg.py
api/tests/unit/services/user/data_sources/: test_user.py
api/tests/unit/services/user/logic/: test_user.py
api/tests/unit/services/user/routers/: test_user.py
api/tests/utils/: constants.py
docker/api/: Dockerfile  pyproject.toml
docker/db/dataset/: init_dataset.sql  initial_users.csv
docker/nginx/: Dockerfile  nginx.conf
fake_data/: create_data.py
